<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm Paradroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu">Settings</string>
    <string name="snoozeafter">Snooze will ring after :</string>
    <string name="add_alarm">+</string>
    <string name="stop">Tap the screen to stop or say something in between two ringing to snooze</string>
    <string name="speak_now">Speak now to snooze !</string>
    <string name="add_alarm_title">Add alarm</string>
    <string name="back">Back</string>
    <string name="activate_voice">Enable Voice recongnition :</string>
    <string name="ok">ok</string>
    <string name="minutes">minutes</string>
    <string name="instructions1">Welcome to paradroid alarm ! Let\'s get started. (Click to continue)</string>
    <string name="instructions2">To add an alarm tap the icon in the top right corner (the little alarm)</string>
    <string name="instructions3">To access the settings tap on \"Settings\" on the top right corner (really?)</string>
    <string name="instructions4">You can snooze the alarm by saying something in between two ringing</string>
    <string name="instructions5">You can stop the alarm by taping the screen</string>
    <string name="instructions6">If to give my developper feedback about issues or ideas, go under \"Settings\", \"Send feedback\", and please yourself !</string>
    <string name="contact">Send feedback</string>
    <string name="sensibility_text">Voice power :</string>
    <string name="choose_ringtone">Choose a ringtone :</string>
    <string name="browse">Browse</string>
    <string name="tap">Tap and speak</string>
    <string name="tap_again">Tap again</string>
    <string name="ringinglength">Ringing length :</string>
    <string name="seconds">seconds</string>
    
    
    
    
    
    
    
    
    <string name="rate">Rate this app</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>

</resources>